create Android, other skills

--- a/public/index.html
+++ b/public/index.html
@@ -44,5 +44,8 @@
     -->
 
 
+   
+      <script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
+
   </body>
 </html>
